# ConfMod

./: .dockerignore  .gitignore  README.md  backend.Dockerfile  docker-compose.yaml
confmod/: README.md  pyproject.toml
confmod-app/backend/: app-config.yaml  cfg.py  dev.py  main.py  main_win.py  pyproject.toml
confmod-app/backend/app/: __init__.py  app.py  db.py  error.py  exception_handlers.py
confmod-app/backend/app/ext/: singleton.py
confmod-app/backend/app/ext/responses/: __init__.py  form_validation_response.py
confmod-app/backend/app/model/: config.py  confmod.py  mutable_ext.py
confmod-app/backend/app/routes/: config.py  functions.py  model.py  validators.py
confmod-app/backend/app/schema/: appconfig.py  config.py  confmod.py  shared.py
confmod-app/backend/app/services/: __init__.py  confmod_config.py  confmod_model.py
confmod/domain/ppm/: aggregator.py  db_fetcher.py  metadata.py
confmod/libconfmod/: __init__.py  io.py
confmod/libconfmod/cli/: __init__.py  exit_codes.py  utils.py
confmod/libconfmod/cli/cfg/: entrypoint.py  generate.py  list.py
confmod/libconfmod/config/: __init__.py  config.py  generate.py  io.py  raw.py
confmod/libconfmod/model/: __init__.py  data_types.py  df_util.py  generate.py  header.py  model_deleteme.py  payload.py  protocols.py  raw.py  shared_types.py  spec.py
confmod/libconfmod/model/formats/json/: __init__.py  decode.py  (+1 more)
confmod/libconfmod/model/statistics/: feature_stat.py
confmod/libconfmod/util/: enum.py  iter.py
confmod/scripts/: config_cli.py  config_example.py  db.py  example_ppm.py  main.py
(+176 files in other folders)
